Fixed the horizontal scrolling issue on mobile

--- a/sites/all/themes/newmedialab/css/newmedialab.custom.css
+++ b/sites/all/themes/newmedialab/css/newmedialab.custom.css
@@ -1036,7 +1036,7 @@ ul.links.inline li.node-readmore{
     #block-menu-menu-header-menu ul.menu {
         position: absolute;
         width: 300px;
-        right: -225px;
+        right: -215px;
         top: 70px;
     }
 }
